kube-state-metrics_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  namespace: monitoring-metrics
spec:
  selector:
    app: kube-state-metrics
  ports:
  - port: 8080
    targetPort: ksm-port
