prometheus_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring-metrics
spec:
  type: ClusterIP
  selector:
    app: prometheus
  ports:
    - name: prometheus
      port: 9090
      targetPort: prometheus
