prometheus_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring-metrics
  annotations:
    cert-manager.io/cluster-issuer: UPDATE-ME
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: ingress-internal
  rules:
  - host: prometheus.UPDATE-ME
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/"
        backend:
          service:
            name: prometheus
            port: 
              number: 9090
  tls:
    - hosts:
      - prometheus.UPDATE-ME
      secretName: prometheus.UPDATE-ME
